// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxn6u9y {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sxn6u9y:visited {
  color: var(--colors-primary500);
}

.sxn6u9y:focus,
.sxn6u9y:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxn6u9y:active {
  color: var(--colors-primary500);
}

.sxn6u9yido38--size-md {
  font-size: var(--fontSizes-md);
  letter-spacing: 0.02em;
  line-height: 1.4;
}

<div>
  <a
    class="sxn6u9y sxn6u9yido38--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxn6u9y {
  color: var(--colors-primary500);
  font-family: var(--fonts-sans);
  text-decoration: none;
  cursor: pointer;
}

.sxn6u9y:visited {
  color: var(--colors-primary500);
}

.sxn6u9y:focus,
.sxn6u9y:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxn6u9y:active {
  color: var(--colors-primary500);
}

.sxn6u9yido38--size-md {
  font-size: var(--fontSizes-md);
  letter-spacing: 0.02em;
  line-height: 1.4;
}

.sxn6u9y6hfh9--size-lg {
  font-size: var(--fontSizes-lg);
  letter-spacing: 0.02em;
  line-height: 1.4;
}

<div>
  <a
    class="sxn6u9y sxn6u9y6hfh9--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
